apps/book-api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: book-api
  name: book-api
  namespace: book-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: book-api
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: book-api
    spec:
      containers:
      - image: ghcr.io/kkato/book-api:latest
        name: book-api
      imagePullSecrets:
      - name: ghcr
