apps/book-api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: book-api
  namespace: book-api
spec:
  selector:
    app: book-api
  ports:
    - port: 80
      targetPort: 8080
